Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Integer var)
    end
end
